smten/share/lib/Smten/Tests/ShouldFail/BadType4.smtn

module Smten.Tests.ShouldFail.BadType4 where

-- The 'Just' pattern has too few arguments.
foo :: Maybe Bool -> Bool
foo m =
  case m of
    Just -> True
    _ -> False

